--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
             <h1 class="header__login-bag__logo">Template</h1>
             <h1 class="header__login-bag__logo--mobile">TL</h1>
             <div class="header__login-bag__wrapper">
-                <a href="#" class="header__login-bag__login">E-mail sing up</a>
+                <a href="#" class="header__login-bag__login">E-mail sign up</a>
                 <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
@@ -257,139 +257,8 @@
 
     </section>
     <div class="line__wrapper"></div>
-    <section class="catalog">
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo.png" alt="Only Skinny Jeans"
-                    title="Only Skinny Jeans">
-                <span class="catalog__content__image__new">NEW</span>
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Only Skinny Jeans"
-                    title="Only Skinny Jeans">
-            </a>
-            <h3 class="catalog__content__title">Only Skinny Jeans</h3>
-            <p class="catalog__content__price">£65.50</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo6.png" alt="Neck Knitted Jumper"
-                    title="Neck Knitted Jumper">
-                <span class="catalog__content__image__new">NEW</span>
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Neck Knitted Jumper"
-                    title="Neck Knitted Jumper">
-            </a>
-            <h3 class="catalog__content__title">Neck Knitted Jumper</h3>
-            <p class="catalog__content__price">£76.25</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo5.png" alt="Turtle Neck Jumper in Rib"
-                    title="Turtle Neck Jumper in Rib">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png"
-                    alt="Turtle Neck Jumper in Rib" title="Turtle Neck Jumper in Rib">
-            </a>
-            <h3 class="catalog__content__title">Turtle Neck Jumper in Rib</h3>
-            <p class="catalog__content__price">£130.25</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo3.png" alt="With Patchwork Crochet"
-                    title="With Patchwork Crochet">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="With Patchwork Crochet"
-                    title="With Patchwork Crochet">
-            </a>
-            <h3 class="catalog__content__title">With Patchwork Crochet</h3>
-            <p class="catalog__content__price">£80.60</p>
-        </div>
-        <div class="catalog__sale-info">
-            <h2 class="catalog__sale-info__heading">Last weekend <span class="catalog__sale-info__heading__mark">extra
-                    50%</span> off on all reduced boots and shoulder bags</h2>
-            <p class="catalog__sale-info__text">This offer is valid in-store and online. Prices displayed reflect this
-                additional discount. this offer ends at 11:59 GMT on March 1st 2019</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo2.png" alt="Levi’s Jeans for women"
-                    title="Levi’s Jeans for women">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Levi’s Jeans for women"
-                    title="Levi’s Jeans for women">
-            </a>
-            <h3 class="catalog__content__title">Levi’s Jeans for women</h3>
-            <p class="catalog__content__price">£95.50</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo13.png"
-                    alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png"
-                    alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
-            </a>
-            <h3 class="catalog__content__title">Boyfriend T-Shirt with Bohemian Print</h3>
-            <p class="catalog__content__price"><span class="catalog__content__price__old">£120.00<img
-                        class="catalog__content__price__old__strikeout" src="img/catalog/strikeout.png"
-                        alt="strikeout"></span>£76.25</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo12.png" alt="Colour Block"
-                    title="Colour Block">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Colour Block"
-                    title="Colour Block">
-            </a>
-            <h3 class="catalog__content__title">Colour Block</h3>
-            <p class="catalog__content__price">£550.50</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo11.png" alt="Monki Festval Knitted"
-                    title="Monki Festval Knitted">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Monki Festval Knitted"
-                    title="Monki Festval Knitted">
-            </a>
-            <h3 class="catalog__content__title">Monki Festval Knitted</h3>
-            <p class="catalog__content__price">£24.75</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo10.png" alt="Oversized Cardigan"
-                    title="Oversized Cardigan">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Oversized Cardigan"
-                    title="Oversized Cardigan">
-            </a>
-            <h3 class="catalog__content__title">Oversized Cardigan</h3>
-            <p class="catalog__content__price">£90.00</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo9.png"
-                    alt="Paul & Joe Sister Jumper  with Neon Trims" title="Paul & Joe Sister Jumper  with Neon Trims">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png"
-                    alt="Paul & Joe Sister Jumper  with Neon Trims" title="Paul & Joe Sister Jumper  with Neon Trims">
-            </a>
-            <h3 class="catalog__content__title">Paul & Joe Sister Jumper with Neon Trims</h3>
-            <p class="catalog__content__price">£19.75</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo8.png" alt="Only Busted Knee Jean"
-                    title="Only Busted Knee Jean">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png" alt="Only Busted Knee Jean"
-                    title="Only Busted Knee Jean">
-            </a>
-            <h3 class="catalog__content__title">Only Busted Knee Jean</h3>
-            <p class="catalog__content__price">£140.50</p>
-        </div>
-        <div class="catalog__product__wrapper">
-            <a href="item.html" class="catalog__product__image__wrapper">
-                <img class="catalog__product__image" src="img/catalog/photo7.png"
-                    alt="Boyfriend T-Shirt with Paris Print" title="Boyfriend T-Shirt with Paris Print">
-                <img class="catalog__product__image--filter" src="img/catalog/filter.png"
-                    alt="Boyfriend T-Shirt with Paris Print" title="Boyfriend T-Shirt with Paris Print">
-            </a>
-            <h3 class="catalog__content__title">Boyfriend T-Shirt with Paris Print</h3>
-            <p class="catalog__content__price">£87.75</p>
-        </div>
-        </div>
-        <div class="catalog__button__wrapper"><button class="catalog____button">Show more</button></div>
+    <section class="catalog" id = "catalog">
+        
     </section>
     <section class="banners">
         <a href="#" class="banners__content banners__content--adidas">
@@ -477,10 +346,12 @@
         </section>
 
     </footer>
+    <script src="js/lodash.js"></script>
     <script src="data/catalog.js"></script>
     <script src="data/best-offer.js"></script>
     <script src="js/start.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/catalog.js"></script>
 </body>
 
 </html>
