--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -16,7 +16,7 @@
             <h1 class="header__login-bag__logo">Template</h1>
             <h1 class="header__login-bag__logo--mobile">TL</h1>
             <div class="header__login-bag__wrapper">
-                <a href="#" class="header__login-bag__login">E-mail sing up</a>
+                <a href="#" class="header__login-bag__login">E-mail sign up</a>
                 <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
