--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,8 @@
                 <a href="shopping-bag.html" class="header__login-bag__bag__wrapper">
                     <img class="header__login-bag__bag__icon" width="12" height="12" alt="bag-icon"
                         src="img/start/1300/ico_bag.png">
-                    <p class="header__login-bag__bag__text">Bag £236.50 (4)</p>
+                    <p class="header__login-bag__bag__text">Bag £<span id="bag_totalPrice">236.50</span> (<span
+                            id="bag_totalQuantity">4</span>)</p>
                 </a>
             </div>
             <div id="header__burger" class="header__burger">&#8801;</div>
