--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -64,84 +64,7 @@
         <h2 class="bag__heading">Shopping bag</h2>
         <div class="line__wrapper"></div>
         <div class="bag-content" id="bag-content">
-            <div class="bag-content__item">
-                <div class="bag-content__wrapper bag-content__wrapper--image">
-                    <img class="bag-content__image" src="img/catalog/photo.png" alt="Only Skinny Jeans"
-                        title="Only Skinny Jeans">
-                    <span class="bag-content__new">NEW</span>
-                    <img class="bag-content__filter" src="img/catalog/filteredit.png" alt="Only Skinny Jeans"
-                        title="Only Skinny Jeans">
-                </div>
-                <div class="bag-content__wrapper">
-                    <h3 class="bag-content__title">Only Skinny Jeans</h3>
-                    <p class="bag-content__price">£65.50</p>
-                    <div class="bag-content__wrap">
-                        <p class="bag-content__text">Color: Philipa wash</p>
-                        <p class="bag-content__text">Size: UK 17</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
-                                class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
-                    </div>
-                    <button class="bag-content__remove">Remove item</button>
-                </div>
-            </div>
-            <div class="bag-content__item">
-                <div class="bag-content__wrapper bag-content__wrapper--image">
-                    <img class="bag-content__image" src="img/catalog/photo9.png"
-                        alt="Paul & Joe Sister Jumper with Neon Trims" title="Paul & Joe Sister Jumper with Neon Trims">
-                    <img class="bag-content__filter" src="img/catalog/filteredit.png"
-                        alt="Paul & Joe Sister Jumper with Neon Trims" title="Paul & Joe Sister Jumper with Neon Trims">
-                </div>
-                <div class="bag-content__wrapper">
-                    <h3 class="bag-content__title">Paul & Joe Sister Jumper with Neon Trims</h3>
-                    <p class="bag-content__price">£19.75</p>
-                    <div class="bag-content__wrap">
-                        <p class="bag-content__text">Color: Blue</p>
-                        <p class="bag-content__text">Size: UK 18</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
-                                class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
-                    </div>
-                    <button class="bag-content__remove">Remove item</button>
-                </div>
-            </div>
-            <div class="bag-content__item">
-                <div class="bag-content__wrapper bag-content__wrapper--image">
-                    <img class="bag-content__image" src="img/catalog/photo13.png"
-                        alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
-                    <img class="bag-content__filter" src="img/catalog/filteredit.png"
-                        alt="Boyfriend T-Shirt with Bohemian Print" title="Boyfriend T-Shirt with Bohemian Print">
-                </div>
-                <div class="bag-content__wrapper">
-                    <h3 class="bag-content__title">Boyfriend T-Shirt with Bohemian Print</h3>
-                    <p class="bag-content__price">£90.00</p>
-                    <div class="bag-content__wrap">
-                        <p class="bag-content__text">Color: Black</p>
-                        <p class="bag-content__text">Size: UK 18</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
-                                class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
-                    </div>
-                    <button class="bag-content__remove">Remove item</button>
-                </div>
-            </div>
-            <div class="bag-content__item">
-                <div class="bag-content__wrapper bag-content__wrapper--image">
-                    <img class="bag-content__image" src="img/catalog/photo6.png" alt="Neck Knitted Jumper"
-                        title="Neck Knitted Jumper">
-                    <span class="bag-content__new">NEW</span>
-                    <img class="bag-content__filter" src="img/catalog/filteredit.png" alt="Neck Knitted Jumper"
-                        title="Neck Knitted Jumper">
-                </div>
-                <div class="bag-content__wrapper">
-                    <h3 class="bag-content__title">Neck Knitted Jumper</h3>
-                    <p class="bag-content__price">£65.50</p>
-                    <div class="bag-content__wrap">
-                        <p class="bag-content__text">Color: Green</p>
-                        <p class="bag-content__text">Size: UK 19</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
-                                class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
-                    </div>
-                    <button class="bag-content__remove">Remove item</button>
-                </div>
-            </div>
+           
         </div>
         <div class="line__wrapper"></div>
         <p class="bag__info">You've qualified for Free UK Next Day Delivery on your order. Don't forget to enter the
@@ -225,6 +148,7 @@
         </section>
 
     </footer>
+    <script src="js/lodash.js"></script>
     <script src="data/catalog.js"></script>
     <script src="data/best-offer.js"></script>
     <script src="js/start.js"></script>
